--- a/Values.yaml
+++ b/Values.yaml
@@ -1,3 +1,3 @@
----
-images:
-  name: <+pipeline.stages.build.spec.execution.steps.output.output.outputVariables.image>
+image:
+  repository: <+pipeline.stages.build.spec.execution.steps.BuildAndPushDockerRegistry_1.artifact_BuildAndPushDockerRegistry_1.stepArtifacts.publishedImageArtifacts[0].imageName>
+  tag:  <+pipeline.stages.build.spec.execution.steps.docker.artifact_docker.stepArtifacts.publishedImageArtifacts[0].tag>
