--- a/Values.yaml
+++ b/Values.yaml
@@ -1,4 +1,4 @@
 image:
-  repository: <+pipeline.stages.build.spec.execution.steps.BuildAndPushDockerRegistry_1.artifact_BuildAndPushDockerRegistry_1.stepArtifacts.publishedImageArtifacts[0].imageName>
-  tag:  <+pipeline.stages.build.spec.execution.steps.docker.artifact_docker.stepArtifacts.publishedImageArtifacts[0].tag>
+  repository: <+pipeline.stages.build.spec.execution.steps.BuildAndPushDockerRegistry_1.spec.repo>
+  tag:  <+pipeline.stages.build.spec.execution.steps.BuildAndPushDockerRegistry_1.spec.tags>
   name: <+pipeline.stages.build.spec.execution.steps.output.output.outputVariables.image>
