--- a/deploy.yaml
+++ b/deploy.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
        containers:
          - name: cal-app
-           image: "{{ .Values.image.name }}" 
+           image: us-central1-docker.pkg.dev/sam-474404/java/sam-474404/java:latest 
            ports:
              - containerPort: 8085
 ---
